--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.3.0",
     "fluent-ffmpeg": "^2.1.2",
     "glob": "^7.1.6",
     "lodash": "^4.17.21",
